--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,4 +1,4 @@
-<form action="/users" method="post">
+<form action="{{ url_for('users_post') }}" method="post">
     <label>
         name
         <input name="name" type="text" value="{{ user.name }}">
