--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -1,14 +1,14 @@
 {% if message %}
     {% for category, mess in message %}
-    <h1>
+    <h2>
         <div class="{{ category }}" style="color: rgb(31, 119, 90);">{{ mess }}</div>
-    </h1>
+    </h2>
     {% endfor %}
 {% endif %}
 <h2><a href="/users/new">new user</a></h2>
 <ul>
     {% for user in users %}
-        <li>{{ user }}</li>
+        <li><a href="{{ url_for('user_edit', id=user.id) }}">{{ user }}</a></li>
     {% endfor %}
 </ul>
 <span><a href="/users?page={{ page - 1 }}">back</a></span>
