--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -1,15 +1,22 @@
 {% if message %}
     {% for category, mess in message %}
     <h2>
-        <div class="{{ category }}" style="color: rgb(31, 119, 90);">{{ mess }}</div>
+        <div class="{{ category }}">{{ mess }}</div>
     </h2>
     {% endfor %}
 {% endif %}
 <h2><a href="/users/new">new user</a></h2>
+<form action="{{ url_for('clear_session') }}" method="post">
+    <input type="submit" value="log out">
+</form>
+{% if not users %}
+<div>no user here</div>
+{% else %}
 <ul>
     {% for user in users %}
         <li><a href="{{ url_for('user_edit', id=user.id) }}">{{ user }}</a></li>
     {% endfor %}
 </ul>
+{% endif %}
 <span><a href="/users?page={{ page - 1 }}">back</a></span>
 <span><a href="/users?page={{ page + 1 }}">next</a></span>
